프로젝트 게시판 생성 페이지 작성

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <nav>
-  <a href="/">홈</a>
+  <a href="/" class="active">홈</a>
   <a href="/projects">프로젝트관리</a>
   <a href="/schedule">일정관리</a>
   <a href="/tasks">업무관리</a>
