--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -9,7 +9,7 @@
 <body>
 <nav>
     <a href="/">홈</a>
-    <a href="/projects">프로젝트관리</a>
+    <a href="/projects" class="active">프로젝트관리</a>
     <a href="/schedule">일정관리</a>
     <a href="/tasks">업무관리</a>
     <a href="/issues">이슈관리</a>
@@ -63,6 +63,6 @@
     </div>
 </div>
 
-<script src="/js/projects.js"></script>
+<script src="/js/projects/projects.js"></script>
 </body>
 </html>
