--- a/src/main/resources/templates/boards.html
+++ b/src/main/resources/templates/boards.html
@@ -13,6 +13,7 @@
 <nav>
     <a href="/">홈</a>
     <a href="/projects">프로젝트관리</a>
+    <a href="/projects/${project.id}/boards" class="active">게시판 리스트</a>
     <a href="/schedule">일정관리</a>
     <a href="/tasks">업무관리</a>
     <a href="/issues">이슈관리</a>
