업무관리페이지 - 진행중

--- a/src/main/resources/templates/schedule.html
+++ b/src/main/resources/templates/schedule.html
@@ -30,7 +30,7 @@
     </div>
     <aside id="right-panel">
         <h2>최근 일정</h2>
-        <ul id="upcoming-list"></ul>
+        <ul id="upcoming-list" class="upcoming-container"></ul>
     </aside>
 </div>
 
