--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -19,7 +19,7 @@
     <a th:href="@{/projects/{pid}/boards/{bid}/posts(pid=${project.id}, bid=${board.id})}" class="active">게시글 리스트</a>
     <a href="/schedule">일정관리</a>
     <a href="/tasks">업무관리</a>
-    <a href="/issues">이슈관리</a>
+    <a href="/issues">공통이슈관리</a>
     <!-- 기타 메뉴 -->
 </nav>
 
