업무관리 쿼리 수정, 공통이슈관리 페이지 폼 작성

--- a/src/main/resources/templates/issues.html
+++ b/src/main/resources/templates/issues.html
@@ -30,7 +30,7 @@
         <input type="date" id="search-from" th:value="${from}"/>
         <input type="date" id="search-to"   th:value="${to}"/>
         <button id="btn-search">검색</button>
-        <button id="btn-new-issue">새 이슈 등록</button>
+        <button id="btn-new-issue" class="btn btn-primary">새 이슈 등록</button>
     </div>
 
     <!-- 리스트 -->
