--- a/src/main/resources/templates/boards.html
+++ b/src/main/resources/templates/boards.html
@@ -16,7 +16,7 @@
     <a th:href="@{/projects/{pid}/boards(pid=${project.id})}" class="active">게시판 리스트</a>
     <a href="/schedule">일정관리</a>
     <a href="/tasks">업무관리</a>
-    <a href="/issues">이슈관리</a>
+    <a href="/issues">공통이슈관리</a>
 </nav>
 
 <div id="content">
