--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -12,7 +12,7 @@
     <a href="/projects" class="active">프로젝트관리</a>
     <a href="/schedule">일정관리</a>
     <a href="/tasks">업무관리</a>
-    <a href="/issues">이슈관리</a>
+    <a href="/issues">공통이슈관리</a>
 </nav>
 
 <div id="content">
