--- a/src/main/resources/templates/schedule.html
+++ b/src/main/resources/templates/schedule.html
@@ -15,7 +15,7 @@
     <a href="/projects">프로젝트관리</a>
     <a href="/schedule" class="active">일정관리</a>
     <a href="/tasks">업무관리</a>
-    <a href="/issues">이슈관리</a>
+    <a href="/issues">공통이슈관리</a>
 </nav>
 
 <div id="content">
